Fix perfect scrollbar for console

--- a/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/console.css
+++ b/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/console.css
@@ -173,7 +173,6 @@
 }
 
 .output-console-content-wrapper {
-    margin-bottom: 10px;
     height: calc(100% - 20px);
     border-top: 3px solid #424242;
 }
